# ArchiPyro

./: .gitignore  LICENSE  PUBLISHING.md  README.md  pyproject.toml
archipyro/: __main__.py
archipyro/cli/: add.py  gen.py  init.py
archipyro/core/: config.py  generator.py
archipyro/templates/fastapi/clean/: README.md.jinja2  model.py.jinja2  repository.py.jinja2  requirements.txt.jinja2  router.py.jinja2  schema.py.jinja2  service.py.jinja2
archipyro/templates/fastapi/clean/app/: main.py.jinja2
archipyro/templates/fastapi/minimal/: README.md.jinja2  main.py.jinja2
archipyro/templates/fastapi/mvc/: README.md.jinja2
archipyro/templates/fastapi/mvc/app/: main.py.jinja2
archipyro/templates/flask/clean/: README.md.jinja2  celery_worker.py.jinja2  form.py.jinja2  middleware.py.jinja2  model.py.jinja2  model_mongodb.py.jinja2  repository.py.jinja2  requirements.txt.jinja2  route.py.jinja2  service.py.jinja2  view.py.jinja2  view_mongodb.py.jinja2
archipyro/templates/flask/clean/app/: __init__.py.jinja2  (+4 more)
archipyro/templates/flask/minimal/: README.md.jinja2  app.py.jinja2
archipyro/templates/flask/mvc/: README.md.jinja2  requirements.txt.jinja2
archipyro/templates/shared/: .dockerignore.jinja2  .env.docker.jinja2  .env.example.jinja2  .env.jinja2  CELERY_GUIDE.md.jinja2  Dockerfile.jinja2  ci.yml.jinja2  docker-compose.yml.jinja2  docker-entrypoint.sh.jinja2  logging_config.py.jinja2
archipyro/templates/shared/tasks/: __init__.py.jinja2  example_task.py.jinja2
archipyro/utils/: prompt.py
tests/: conftest.py  test_cli.py  test_generated_project.py
(+51 files in other folders)
