[project]
name = "archipyro"
version = "0.1.2"
description = "Forge scalable Python backend architectures in seconds."
authors = [
    {name = "Govind Gojiya", email = "govind.gojiya.09@gmail.com"},
]
dependencies = [
    "typer>=0.9.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "pydantic>=2.0.0",
    "inflect>=7.0.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
archipyro = "archipyro.__main__:app"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
